# airflow-provider-kaggle

./: .astro-registry.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: testing.yaml
kaggle_provider/: __init__.py
kaggle_provider/_utils/: credentials.py  encoder.py
kaggle_provider/example_dags/: kaggle.py
kaggle_provider/hooks/: kaggle.py
kaggle_provider/operators/: kaggle.py
kaggle_provider/utils/: credentials.py
sample_provider/example_dags/: kaggle.py
tests/: conftest.py
tests/hooks/: test_kaggle_hook.py
tests/operators/: test_kaggle_operator.py
